<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen1"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/preperation"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="164dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cook"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="164dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textColor="#040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preperation" />

    <EditText
        android:id="@+id/nutrition"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:background="@color/white"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cook" />

    <EditText
        android:id="@+id/ingredients"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:background="@color/white"
        android:gravity="start|top"
        android:hint="@string/type_here"
        android:inputType="textMultiLine"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrition" />

    <EditText
        android:id="@+id/methods"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:background="@color/white"
        android:gravity="start|top"
        android:hint="@string/type_here"
        android:inputType="textMultiLine"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients" />

    <EditText
        android:id="@+id/createdBY"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:background="@color/white"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textColor="#090808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/methods" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="407dp"
        android:layout_height="50dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="167dp"
        android:onClick="getRecordFromSQL"
        android:text="@string/submit"
        android:contentDescription="@string/submit_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createdBY"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:max="10"
        android:min="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="2dp"
        android:shadowColor="#E10707"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/preparation_time"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/preperation"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="56dp"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/cooking_time"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cook"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecords" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="11dp"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/nutrition_per_serving"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nutrition"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="264dp"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/ingredients"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ingredients" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="43dp"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/methods"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/methods" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="120dp"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/created_by"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/createdBY" />


</androidx.constraintlayout.widget.ConstraintLayout>